Add basic mongo implementation

--- a/BorrowIt.Common/BorrowIt.Common.Mongo/BorrowIt.Common.Mongo.csproj
+++ b/BorrowIt.Common/BorrowIt.Common.Mongo/BorrowIt.Common.Mongo.csproj
@@ -4,4 +4,22 @@
         <TargetFramework>netstandard2.0</TargetFramework>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Autofac" Version="4.9.1" />
+      <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
+      <PackageReference Include="MongoDB.Bson" Version="2.8.0" />
+      <PackageReference Include="MongoDB.Driver" Version="2.8.0" />
+      <PackageReference Include="MongoDB.Driver.Core" Version="2.8.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Reference Include="Microsoft.Extensions.Configuration.Abstractions, Version=2.0.0.0, Culture=neutral, PublicKeyToken=adb9793829ddae60">
+        <HintPath>C:\Users\jakub.swiech.KOTRAK\.nuget\packages\microsoft.extensions.configuration.abstractions\2.0.0\lib\netstandard2.0\Microsoft.Extensions.Configuration.Abstractions.dll</HintPath>
+      </Reference>
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\BorrowIt.Common\BorrowIt.Common.csproj" />
+    </ItemGroup>
+
 </Project>
