add get all to generic repo and test on api

--- a/BorrowIt.Common/BorrowIt.Api/appsettings.json
+++ b/BorrowIt.Common/BorrowIt.Api/appsettings.json
@@ -25,5 +25,9 @@
       "AutoDelete": true,
       "Type": "Topic"
     }
+  },
+  "mongoDb": {
+    "ConnectionString": "mongodb://admin:test123@localhost:27017/BorrowIt",
+    "DatabaseName": "BorrowIt"
   }
 }
