--- a/BorrowIt.Common/BorrowIt.Api/BorrowIt.Api.csproj
+++ b/BorrowIt.Common/BorrowIt.Api/BorrowIt.Api.csproj
@@ -8,12 +8,15 @@
     <ItemGroup>
         <PackageReference Include="Autofac" Version="4.9.1" />
         <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="4.4.0" />
+        <PackageReference Include="AutoMapper" Version="8.0.0" />
         <PackageReference Include="Microsoft.AspNetCore.App" />
         <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\BorrowIt.Common.Mongo\BorrowIt.Common.Mongo.csproj" />
       <ProjectReference Include="..\BorrowIt.Common.Rabbit\BorrowIt.Common.Rabbit.csproj" />
+      <ProjectReference Include="..\BorrowIt.Common\BorrowIt.Common.csproj" />
     </ItemGroup>
 
 </Project>
