--- a/BorrowIt.Common/BorrowIt.Common/BorrowIt.Common.csproj
+++ b/BorrowIt.Common/BorrowIt.Common/BorrowIt.Common.csproj
@@ -5,6 +5,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Autofac" Version="4.9.1" />
       <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
     </ItemGroup>
 
