--- a/BorrowIt.Common/BorrowIt.Common.Rabbit/BorrowIt.Common.Rabbit.csproj
+++ b/BorrowIt.Common/BorrowIt.Common.Rabbit/BorrowIt.Common.Rabbit.csproj
@@ -2,6 +2,9 @@
 
     <PropertyGroup>
         <TargetFramework>netstandard2.0</TargetFramework>
+        <PackageId>BorrowIt.Common.Rabbit</PackageId>
+        <Version>1.0.0</Version>
+        <Authors>Jakub Święch</Authors>
     </PropertyGroup>
 
     <ItemGroup>
