--- a/BorrowIt.Common/BorrowIt.Common/BorrowIt.Common.csproj
+++ b/BorrowIt.Common/BorrowIt.Common/BorrowIt.Common.csproj
@@ -3,13 +3,14 @@
     <PropertyGroup>
         <TargetFramework>netstandard2.0</TargetFramework>
         <PackageId>BorrowIt.Common</PackageId>
-        <Version>1.0.7</Version>
+        <Version>1.0.8</Version>
         <Authors>Jakub Święch</Authors>
     </PropertyGroup>
 
     <ItemGroup>
       <PackageReference Include="Autofac" Version="4.9.1" />
       <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
+      <PackageReference Include="MongoDB.Driver" Version="2.8.0" />
     </ItemGroup>
 
 </Project>
