--- a/BorrowIt.Common/BorrowIt.Api/BorrowIt.Api.csproj
+++ b/BorrowIt.Common/BorrowIt.Api/BorrowIt.Api.csproj
@@ -1,9 +1,19 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
-        <TargetFramework>netcoreapp2.2</TargetFramework>
+        <TargetFramework>netcoreapp3.1</TargetFramework>
         <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
     </PropertyGroup>
+
+    <ItemGroup>
+      <Content Remove="rawrabbit.json" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <EmbeddedResource Include="rawrabbit.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </EmbeddedResource>
+    </ItemGroup>
 
     <ItemGroup>
         <PackageReference Include="Autofac" Version="4.9.1" />
