update packages and docker-compose

--- a/BorrowIt.Common/BorrowIt.Api/appsettings.json
+++ b/BorrowIt.Common/BorrowIt.Api/appsettings.json
@@ -27,7 +27,7 @@
     }
   },
   "mongoDb": {
-    "ConnectionString": "mongodb://admin:test123@localhost:27017/BorrowIt",
+    "ConnectionString": "mongodb://root:admin@localhost:27017/admin",
     "DatabaseName": "BorrowIt"
   }
 }
