--- a/BorrowIt.Common/BorrowIt.Common.Rabbit/BorrowIt.Common.Rabbit.csproj
+++ b/BorrowIt.Common/BorrowIt.Common.Rabbit/BorrowIt.Common.Rabbit.csproj
@@ -3,18 +3,20 @@
     <PropertyGroup>
         <TargetFramework>netstandard2.0</TargetFramework>
         <PackageId>BorrowIt.Common.Rabbit</PackageId>
-        <Version>1.1.1</Version>
+        <Version>1.1.3</Version>
         <Authors>Jakub Święch</Authors>
-        <PackageVersion>1.1.1</PackageVersion>
+        <PackageVersion>1.1.3</PackageVersion>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Autofac" Version="4.9.1" />
+      <PackageReference Include="Autofac" Version="6.0.0" />
       <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
       <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.2.0" />
-      <PackageReference Include="RawRabbit" Version="1.10.4" />
-      <PackageReference Include="RawRabbit.DependencyInjection.Autofac" Version="1.10.4" />
-      <PackageReference Include="RawRabbit.vNext" Version="1.10.4" />
+      <PackageReference Include="RawRabbit" Version="2.0.0-rc5" />
+      <PackageReference Include="RawRabbit.DependencyInjection.Autofac" Version="2.0.0-rc5" />
+      <PackageReference Include="RawRabbit.Operations.Publish" Version="2.0.0-rc5" />
+      <PackageReference Include="RawRabbit.Operations.Subscribe" Version="2.0.0-rc5" />
+      <PackageReference Include="RawRabbit.vNext" Version="2.0.0-beta8" />
     </ItemGroup>
 
 </Project>
