--- a/BorrowIt.Common/BorrowIt.Common.Rabbit/BorrowIt.Common.Rabbit.csproj
+++ b/BorrowIt.Common/BorrowIt.Common.Rabbit/BorrowIt.Common.Rabbit.csproj
@@ -3,9 +3,9 @@
     <PropertyGroup>
         <TargetFramework>netstandard2.0</TargetFramework>
         <PackageId>BorrowIt.Common.Rabbit</PackageId>
-        <Version>1.1.3</Version>
+        <Version>1.1.5</Version>
         <Authors>Jakub Święch</Authors>
-        <PackageVersion>1.1.3</PackageVersion>
+        <PackageVersion>1.1.5</PackageVersion>
     </PropertyGroup>
 
     <ItemGroup>
@@ -14,9 +14,14 @@
       <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.2.0" />
       <PackageReference Include="RawRabbit" Version="2.0.0-rc5" />
       <PackageReference Include="RawRabbit.DependencyInjection.Autofac" Version="2.0.0-rc5" />
+      <PackageReference Include="RawRabbit.Logging.Serilog" Version="2.0.0-beta7" />
       <PackageReference Include="RawRabbit.Operations.Publish" Version="2.0.0-rc5" />
       <PackageReference Include="RawRabbit.Operations.Subscribe" Version="2.0.0-rc5" />
       <PackageReference Include="RawRabbit.vNext" Version="2.0.0-beta8" />
+      <PackageReference Include="Serilog" Version="2.10.1-dev-01256" />
+      <PackageReference Include="Serilog.Extensions.Hosting" Version="3.1.0" />
+      <PackageReference Include="Serilog.Extensions.Logging" Version="3.0.2-dev-10281" />
+      <PackageReference Include="Serilog.Sinks.Console" Version="4.0.0-dev-00839" />
     </ItemGroup>
 
 </Project>
